Fixed Geekhaven Logo Getting Stretched

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,6 +49,7 @@ button {
   letter-spacing: 0.2em;
   padding: 0.5rem 10rem;
   background-color: rgb(235, 245, 255);
+  height:65px;
 }
 
 #navbar.fixed-top {
@@ -65,6 +66,11 @@ button {
   height: 40px;
   margin: 0 0 10px 10px;
   margin-bottom: 10px;
+}
+
+.navbar-brand img#myImg{
+  margin-top:1.5px;
+  margin-right:10px;
 }
 
 #navbarNav .nav-link {
